[gd_scene load_steps=20 format=2]

[ext_resource path="res://scripts/play.gd" type="Script" id=1]
[ext_resource path="res://icons/arrow_02_right.png" type="Texture" id=2]
[ext_resource path="res://scene/splash_text.tscn" type="PackedScene" id=3]
[ext_resource path="res://images/whitepad.png" type="Texture" id=4]
[ext_resource path="res://scene/highscore2.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/PlatNomor-eZ2dm.otf" type="DynamicFontData" id=6]
[ext_resource path="res://icons/music_off.png" type="Texture" id=7]
[ext_resource path="res://icons/sound_off.png" type="Texture" id=8]
[ext_resource path="res://icons/no_ads.png" type="Texture" id=9]
[ext_resource path="res://images/color.png" type="Texture" id=10]
[ext_resource path="res://icons/sound_on.png" type="Texture" id=11]
[ext_resource path="res://icons/music_on.png" type="Texture" id=12]
[ext_resource path="res://icons/twitter.png" type="Texture" id=14]
[ext_resource path="res://scene/Admob.tscn" type="PackedScene" id=20]

[sub_resource type="Animation" id=1]
resource_name = "enters"

[sub_resource type="Animation" id=2]
resource_name = "exit"
length = 0.5

[sub_resource type="DynamicFont" id=3]
size = 80
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=4]
resource_name = "outro"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "play"
length = 9.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TouchScreenButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 3, 3.2, 3.3, 3.4, 5, 6, 8.2, 9.2 ),
"transitions": PoolRealArray( 0.5, 0.5, 2, 1, 1, 1, 2, 0.5, 0.5, 2 ),
"update": 0,
"values": [ Vector2( 302.188, 664.49 ), Vector2( 302.188, 664.49 ), Vector2( 710.188, 664.49 ), Vector2( 710.188, 1328.49 ), Vector2( -202.812, 1328.49 ), Vector2( -181.937, 664.49 ), Vector2( -181.937, 664.49 ), Vector2( 226.063, 664.49 ), Vector2( 226.063, 664.49 ), Vector2( 302.188, 664.49 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TouchScreenButton2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 3, 5, 6, 6.3, 6.4, 6.5, 8.2, 9.2 ),
"transitions": PoolRealArray( 0.5, 0.5, 2, 2, 0.5, 1, 1, 1, 0.5, 2 ),
"update": 0,
"values": [ Vector2( 226.063, 666.7 ), Vector2( 226.063, 666.7 ), Vector2( 302.188, 666.7 ), Vector2( 302.188, 666.7 ), Vector2( 710.188, 666.7 ), Vector2( 710.188, 1328.49 ), Vector2( -202.812, 1328.49 ), Vector2( -202.812, 664.49 ), Vector2( -202.812, 664.49 ), Vector2( 226.063, 664.49 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TouchScreenButton3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2, 3, 5, 6, 8.2, 9.2, 9.3, 9.4, 9.5, 9.6 ),
"transitions": PoolRealArray( 0.5, 0.5, 2, 2, 0.5, 0.5, 2, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -181.937, 666.7 ), Vector2( -181.937, 666.7 ), Vector2( 226.063, 666.7 ), Vector2( 226.063, 666.7 ), Vector2( 302.188, 666.7 ), Vector2( 302.188, 666.7 ), Vector2( 710.188, 666.7 ), Vector2( 710.188, 1328.49 ), Vector2( -202.812, 1328.49 ), Vector2( -202.812, 664.49 ), Vector2( -202.812, 664.49 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TouchScreenButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 3.1, 3.8, 6, 9.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.186047 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TouchScreenButton2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2, 4, 6.2, 8.2, 9.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.30303 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TouchScreenButton3:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2, 3, 7.2, 9.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="play" type="Node2D"]
position = Vector2( 0, -64 )
script = ExtResource( 1 )

[node name="intro" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/enters = SubResource( 1 )
anims/exit = SubResource( 2 )

[node name="Admob" parent="." instance=ExtResource( 20 )]

[node name="Button" type="Button" parent="."]
margin_left = 240.672
margin_top = 1224.63
margin_right = 710.672
margin_bottom = 1486.63
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 3 )
toggle_mode = true
text = "@6egames"
icon = ExtResource( 14 )
flat = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="highscore2" parent="." instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0.427451 )
margin_left = 226.603
margin_top = 166.568
margin_right = 498.603
margin_bottom = 216.568
grow_horizontal = 2
grow_vertical = 2
text = "highscore: 50"
align = 1
valign = 1

[node name="splash" parent="." instance=ExtResource( 3 )]
position = Vector2( 359, 410 )
bootsplash = false

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 302.188, 664.49 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 2 )

[node name="TouchScreenButton2" type="TouchScreenButton" parent="."]
position = Vector2( 226.063, 666.7 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 2 )

[node name="TouchScreenButton3" type="TouchScreenButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -181.937, 666.7 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/outro = SubResource( 4 )

[node name="whitepad5" type="Sprite" parent="."]
modulate = Color( 0.027451, 0.788235, 0.992157, 0.568627 )
position = Vector2( 46.3008, 236.864 )
rotation = 0.785398
scale = Vector2( 0.840067, 1.72769 )
texture = ExtResource( 4 )

[node name="whitepad13" type="Sprite" parent="."]
modulate = Color( 0.027451, 0.788235, 0.992157, 0.254902 )
position = Vector2( 30.7193, 700.84 )
rotation = 0.785398
scale = Vector2( 0.840067, 1.72769 )
texture = ExtResource( 4 )

[node name="whitepad14" type="Sprite" parent="."]
modulate = Color( 0.027451, 0.788235, 0.992157, 0.490196 )
position = Vector2( -45.38, 733.036 )
rotation = 0.785398
scale = Vector2( 0.840067, 1.72769 )
texture = ExtResource( 4 )

[node name="whitepad7" type="Sprite" parent="."]
modulate = Color( 0.027451, 0.788235, 0.992157, 0.376471 )
position = Vector2( 10.9809, 216.794 )
rotation = 0.785398
scale = Vector2( 0.840067, 1.72769 )
texture = ExtResource( 4 )

[node name="whitepad9" type="Sprite" parent="."]
modulate = Color( 0.027451, 0.788235, 0.992157, 0.447059 )
position = Vector2( 27.2178, 51.4387 )
rotation = 0.785398
scale = Vector2( 0.840067, 1.72769 )
texture = ExtResource( 4 )

[node name="whitepad10" type="Sprite" parent="."]
modulate = Color( 0.027451, 0.788235, 0.992157, 0.290196 )
position = Vector2( 54.8607, 75.4132 )
rotation = 0.785398
scale = Vector2( 0.840067, 1.16754 )
texture = ExtResource( 4 )

[node name="whitepad8" type="Sprite" parent="."]
modulate = Color( 0.027451, 0.788235, 0.992157, 0.341176 )
position = Vector2( 12.7892, 166.584 )
rotation = 0.785398
scale = Vector2( 0.840067, 2.30514 )
texture = ExtResource( 4 )

[node name="whitepad6" type="Sprite" parent="."]
modulate = Color( 0.027451, 0.788235, 0.992157, 0.490196 )
position = Vector2( 791.698, 328.258 )
rotation = -0.785398
scale = Vector2( 0.840067, 1.72769 )
texture = ExtResource( 4 )

[node name="whitepad11" type="Sprite" parent="."]
modulate = Color( 0.027451, 0.788235, 0.992157, 0.490196 )
position = Vector2( 753.661, 339.405 )
rotation = -0.785398
scale = Vector2( 0.840067, 1.72769 )
texture = ExtResource( 4 )

[node name="whitepad12" type="Sprite" parent="."]
modulate = Color( 0.027451, 0.788235, 0.992157, 0.490196 )
position = Vector2( 792.721, 433.607 )
rotation = -0.785398
scale = Vector2( 0.840067, 1.72769 )
texture = ExtResource( 4 )

[node name="whitepad20" type="Sprite" parent="."]
modulate = Color( 0.027451, 0.788235, 0.992157, 0.490196 )
position = Vector2( 236.761, 1337.47 )
rotation = -0.785398
scale = Vector2( 0.840067, 1.72769 )
texture = ExtResource( 4 )

[node name="whitepad19" type="Sprite" parent="."]
modulate = Color( 0.027451, 0.788235, 0.992157, 0.490196 )
position = Vector2( 198.724, 1348.61 )
rotation = -0.785398
scale = Vector2( 0.840067, 1.72769 )
texture = ExtResource( 4 )

[node name="whitepad18" type="Sprite" parent="."]
modulate = Color( 0.027451, 0.788235, 0.992157, 0.490196 )
position = Vector2( 237.784, 1442.81 )
rotation = -0.785398
scale = Vector2( 0.840067, 1.72769 )
texture = ExtResource( 4 )

[node name="whitepad17" type="Sprite" parent="."]
modulate = Color( 0.027451, 0.788235, 0.992157, 0.490196 )
position = Vector2( 699.68, 964.531 )
rotation = 0.785398
scale = Vector2( 0.840067, 0.530282 )
texture = ExtResource( 4 )

[node name="whitepad16" type="Sprite" parent="."]
modulate = Color( 0.027451, 0.788235, 0.992157, 0.490196 )
position = Vector2( 716.382, 885.077 )
rotation = 0.785398
scale = Vector2( 0.840067, 0.392999 )
texture = ExtResource( 4 )

[node name="whitepad15" type="Sprite" parent="."]
modulate = Color( 0.027451, 0.788235, 0.992157, 0.490196 )
position = Vector2( 695.984, 1027.41 )
rotation = 0.785398
scale = Vector2( 0.840067, 0.515028 )
texture = ExtResource( 4 )

[node name="playbutton_anim" type="AnimationPlayer" parent="."]
autoplay = "play"
anims/play = SubResource( 5 )

[node name="musicoff" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 456.919, 1020.77 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 7 )

[node name="musicon" type="TouchScreenButton" parent="."]
position = Vector2( 456.919, 1020.77 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 12 )

[node name="soundoff" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 163.495, 1023.55 )
scale = Vector2( 0.8, 0.8 )
z_index = -1
normal = ExtResource( 8 )

[node name="soundon" type="TouchScreenButton" parent="."]
position = Vector2( 165.495, 1023.55 )
scale = Vector2( 0.8, 0.8 )
z_index = -1
normal = ExtResource( 11 )

[node name="no ads" type="TouchScreenButton" parent="."]
position = Vector2( 309.203, 1022.56 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 9 )

[node name="color" type="Sprite" parent="."]
z_index = -1
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="color3" type="Sprite" parent="color"]
modulate = Color( 0.133333, 0.666667, 0.901961, 1 )
position = Vector2( 508, 1073.44 )
scale = Vector2( 1.2, 1.2 )
z_index = -2
texture = ExtResource( 10 )

[node name="color5" type="Sprite" parent="color"]
modulate = Color( 0.133333, 0.666667, 0.901961, 1 )
position = Vector2( 217, 1073.44 )
scale = Vector2( 1.2, 1.2 )
z_index = -2
texture = ExtResource( 10 )

[node name="color4" type="Sprite" parent="color"]
modulate = Color( 0.133333, 0.666667, 0.901961, 1 )
position = Vector2( 360, 1073.44 )
scale = Vector2( 1.2, 1.2 )
z_index = -2
texture = ExtResource( 10 )
[connection signal="animation_finished" from="intro" to="." method="_on_intro_animation_finished"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="TouchScreenButton2" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="TouchScreenButton3" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="musicoff" to="." method="_on_musicoff_pressed"]
[connection signal="pressed" from="musicon" to="." method="_on_musicon_pressed"]
[connection signal="pressed" from="soundoff" to="." method="_on_soundoff_pressed"]
[connection signal="pressed" from="soundon" to="." method="_on_soundon_pressed"]
